objects/NPS_Migration__c.object
<CustomObject>
    <fields>
        <fullName>Action_Owner__c</fullName>
        <inlineHelpText>Person who has been asked to contact the customer re their feedback given.</inlineHelpText>
        <label>Action Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bernd Fabian</fullName>
                </value>
                <value>
                    <fullName>Rene Wehlauch</fullName>
                </value>
                <value>
                    <fullName>Manfred Hagelmueller</fullName>
                </value>
                <value>
                    <fullName>Marc Benoit</fullName>
                </value>
                <value>
                    <fullName>Mikhail Shelkov</fullName>
                </value>
                <value>
                    <fullName>Pascal Sequin</fullName>
                </value>
                <value>
                    <fullName>PK Ramakrishnan</fullName>
                </value>
                <value>
                    <fullName>Ronnie Fotheringham</fullName>
                </value>
                <value>
                    <fullName>Ian Skinner</fullName>
                </value>
                <value>
                    <fullName>Adam Duncan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_01__c</fullName>
        <label>Answer 01</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_02__c</fullName>
        <label>Answer 02</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_03__c</fullName>
        <label>Answer 03</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>NPS Migration</relationshipLabel>
        <relationshipName>NPS_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPS Migration</relationshipLabel>
        <relationshipName>NPS_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_status__c</fullName>
        <label>Completion status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPS Migration (Contact Person Name)</relationshipLabel>
        <relationshipName>NPS_Migration1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPS Migration</relationshipLabel>
        <relationshipName>NPS_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type A</fullName>
                </value>
                <value>
                    <fullName>Type B</fullName>
                </value>
                <value>
                    <fullName>Type C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle_Month__c</fullName>
        <label>Cycle/Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan/Jul</fullName>
                </value>
                <value>
                    <fullName>Feb/Aug</fullName>
                </value>
                <value>
                    <fullName>Mar/Sep</fullName>
                </value>
                <value>
                    <fullName>Apr/Oct</fullName>
                </value>
                <value>
                    <fullName>May/Nov</fullName>
                </value>
                <value>
                    <fullName>Jun/Dec</fullName>
                </value>
                <value>
                    <fullName>Jul/Jan</fullName>
                </value>
                <value>
                    <fullName>Aug/Feb</fullName>
                </value>
                <value>
                    <fullName>Sep/Mar</fullName>
                </value>
                <value>
                    <fullName>Oct/Apr</fullName>
                </value>
                <value>
                    <fullName>Nov/May</fullName>
                </value>
                <value>
                    <fullName>Dec/Jun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <label>Follow Up</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Category__c</fullName>
        <label>Function Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category A</fullName>
                </value>
                <value>
                    <fullName>Category B</fullName>
                </value>
                <value>
                    <fullName>Category C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_End__c</fullName>
        <label>Interview End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Start__c</fullName>
        <label>Interview Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Months__c</fullName>
        <formula>CASE( Month(Interview_End__c ), 
1, &quot;1-Jan&quot;, 
2, &quot;2-Feb&quot;, 
3, &quot;3-Mar&quot;, 
4, &quot;4-Apr&quot;, 
5, &quot;5-May&quot;, 
6, &quot;6-Jun&quot;, 
7, &quot;7-Jul&quot;, 
8, &quot;8-Aug&quot;, 
9, &quot;9-Sep&quot;, 
10, &quot;10-Oct&quot;, 
11, &quot;11-Nov&quot;, 
12, &quot;12-Dec&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Months</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_feedback_actions__c</fullName>
        <label>NPS feedback/actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Not_Applicable_02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable 02</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Applicable_03__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable 03</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Applicable_04__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable 04</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Question_01__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question 01</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>NPS Migration</relationshipLabel>
        <relationshipName>NPS01_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_02__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question 02</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>NPS Migration</relationshipLabel>
        <relationshipName>NPS02_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_03__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question 03</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>NPS Migration</relationshipLabel>
        <relationshipName>NPS03_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_14T__c</fullName>
        <label>Question 14T</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_15T__c</fullName>
        <label>Question 15T</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_5T__c</fullName>
        <label>Question 5T</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Questions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question 1</fullName>
                </value>
                <value>
                    <fullName>Question 2</fullName>
                </value>
                <value>
                    <fullName>Question 3</fullName>
                </value>
                <value>
                    <fullName>Question 4</fullName>
                </value>
                <value>
                    <fullName>Question 5</fullName>
                </value>
                <value>
                    <fullName>Question 6</fullName>
                </value>
                <value>
                    <fullName>Question 7</fullName>
                </value>
                <value>
                    <fullName>Question 8</fullName>
                </value>
                <value>
                    <fullName>Question 9</fullName>
                </value>
                <value>
                    <fullName>Question 10</fullName>
                </value>
                <value>
                    <fullName>Question 13</fullName>
                </value>
                <value>
                    <fullName>Question 14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NAM</fullName>
                </value>
                <value>
                    <fullName>LAM</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>ROA</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Replayed__c</fullName>
        <label>Replayed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reply_14T__c</fullName>
        <label>Reply 14T</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_15T__c</fullName>
        <label>Reply 15T</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reply_5T__c</fullName>
        <label>Reply 5T</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_ID__c</fullName>
        <label>Response ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Cycle_1__c</fullName>
        <inlineHelpText>Score from surveys.</inlineHelpText>
        <label>Score Cycle 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score_Cycle_2__c</fullName>
        <inlineHelpText>Score from second survey.</inlineHelpText>
        <label>Score Cycle 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>DNR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>TEXT(Score_Cycle_1__c) + TEXT(Score_Cycle_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Year__c</fullName>
        <label>Survey Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_duration_seconds__c</fullName>
        <label>Survey duration (seconds)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_party_unique_identifier__c</fullName>
        <label>Third party unique identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Oppty_Amount__c</fullName>
        <formula>Text(Company_Name__r.Total_Oppty_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Oppty Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>DNR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NPS Migration</label>
    <nameField>
        <displayFormat>NPS-{000000}</displayFormat>
        <label>NPS Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS Migration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>